--- a/style.css
+++ b/style.css
@@ -1152,6 +1152,40 @@
   }
 }
 
+@media (max-width: 400px) and (max-height: 730px) {
+    .header-txt {
+    font-size: 4.6vw;
+  }
+  .foot {
+    font-size: 2.3vw;
+  }
+  .special {
+    width: 37vw;
+    position: absolute;
+    top: 60vh;
+    right: 12vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+  .sea-freight {
+    width: 37vw;
+    position: absolute;
+    top: 74.5vh;
+    right: 32vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+  
+  .air-freight {
+    width: 37vw;
+    position: absolute;
+    top: 60vh;
+    right: 51vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+}
+
 @media (max-width: 370px) {
   .foot {
     font-size: 2.5vw;
