--- a/style.css
+++ b/style.css
@@ -1090,6 +1090,51 @@
   }
 }
 
+@media (max-width: 470px) and (max-height: 740px) {
+  .header-txt {
+    font-size: 4.2vw;
+  }
+  .special {
+    width: 32vw;
+    position: absolute;
+    top: 60vh;
+    right: 16vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+  .sea-freight {
+    width: 32vw;
+    position: absolute;
+    top: 77vh;
+    right: 32vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+  
+  .air-freight {
+    width: 32vw;
+    position: absolute;
+    top: 60vh;
+    right: 50vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+  }
+
+  .head-txt {
+    font-size: 7.5vw;
+  }
+  .txt1 {
+    font-size: 3.25vw;
+  }
+  .left-side {
+    padding-top: 15vh;
+    padding-top: 15dvh;
+  }
+  .foot {
+    font-size: 2.1vw;
+  }
+}
+
 @media (max-width: 430px) {
   .special {
     width: 35vw;
@@ -1137,40 +1182,6 @@
     width: 37vw;
     position: absolute;
     top: 77vh;
-    right: 32vw;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
-  }
-  
-  .air-freight {
-    width: 37vw;
-    position: absolute;
-    top: 60vh;
-    right: 51vw;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
-  }
-}
-
-@media (max-width: 400px) and (max-height: 730px) {
-    .header-txt {
-    font-size: 4.6vw;
-  }
-  .foot {
-    font-size: 2.3vw;
-  }
-  .special {
-    width: 37vw;
-    position: absolute;
-    top: 60vh;
-    right: 12vw;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
-  }
-  .sea-freight {
-    width: 37vw;
-    position: absolute;
-    top: 71.5vh;
     right: 32vw;
     border-radius: 10px;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
